--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -10,6 +10,7 @@ body{
   background-color: #D4CDC4;
   font-family: 'Poppins';
 }
+/* Estilos para celular */
 
 @media(max-width: 480px) {
   .homediv{
@@ -116,6 +117,86 @@ body{
     margin: 10px auto 10px;
     text-align:center;
   }
+  /* Login*/
+
+  .loginDiv{
+    position: relative;
+    top: 20px;
+    width: 100vw;
+    height: 100vh;
+    bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+  }
+
+  .imgLogin {
+    position: absolute;
+    background-image: url(../assets/image-food.png);
+    width: 200px;
+    height: 200px;
+    top: 60px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .messageLogin {
+    position: absolute;
+    text-align: center;
+    align-items: center;
+    width: 100%;
+    font-size: 25px;
+    top: 270px;
+  }
+
+  .credencialesdiv {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-size: cover;
+    align-items: center;
+    top: 320px;
+    width: 100%;
+  }
+
+  .loginCorreo, .loginContra {
+    margin: 8px 8px 0px 8px;
+    border-radius: 10px;
+    padding: 12px;
+    font-size: 18px;
+    width: 90%;
+    font-family: 'Poppins';
+    border-style: none;
+
+  }
+
+  .buttonReturn {
+    position: absolute;
+    margin: 8px 8px 0px 8px;
+    border-radius: 10px;
+    font-size: 18px;
+    flex-direction: column;
+    top: 450px;
+    padding: 12px;
+    width: 90%;
+    background: #F2B872;
+    align-items: center;
+    font-family: 'Poppins';
+    border-style: none;
+  }
+  .mensajeregister {
+    position: absolute;
+    flex-direction: column;
+    width: 200px;
+    margin: 10px auto 10px;
+    top:550px;
+  }
   
   /*Register*/
   .registerDiv{
@@ -150,42 +231,42 @@ body{
     position: absolute;
   }
   .infoRegister{
-    top: 310px;
+    top: 320px;
     position: absolute;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background-size: cover;
     align-items: center;
-    width: 90%;
+    width: 100%;
     
   }
   
   .emailRegister, .passwordRegister, .checkPasswordRegister {
     position: relative;
-    margin: 8px 0px 0px 8px;
+    margin: 8px 8px 0px 8px;
     border-radius: 10px;
     padding: 12px 0px 12px 60px;
     font-size: 18px;
     font-family: 'Poppins';
     border-style: none;
     width: 90%;
-    
   }
   .buttonSaveInformation{
     position: absolute;
-    margin: 7px 0px 0px 8px;
+    margin: 8px 8px 0px 8px;
     border-radius: 10px;
     padding: 12px;
     font-size: 18px;
     font-family: 'Poppins';   
     border-style: none;
-    top: 490px;
+    top: 170px;
     background-color: #F2B872;
-    width: 82.5%;
-  }
+    width: 90%;
+    }
   .iconEmail1, .iconPassword {
     position: absolute;
-    display: flex;  
+    display: flex; 
   }
   .emailRegister{
     background-image:url(../assets/icon_email.png);
