--- a/src/styles/error404.css
+++ b/src/styles/error404.css
@@ -8,7 +8,7 @@
 
 body{
   background-color: #D4CDC4;
-  font-family: 'Poppins';
+  font-family: 'Poppins', sans-serif;
 }
 
 @media(max-width: 600px) {
@@ -37,9 +37,10 @@ body{
     border-radius: 10px;
     padding: 12px;
     margin: auto 15px;
+    margin-top: 15px;
     font-size: 18px;
     border-style: none;
-    font-family: 'Poppins';
+    font-family: 'Poppins', sans-serif;
     background-color: #F2B872;
   }
 
@@ -55,7 +56,5 @@ body{
     color: #80A6A2;
   }
 
-  .btnerror{
-    margin-top: 15px;
-  }
+
 }
