--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -11,56 +11,56 @@ body{
   font-family: 'Poppins', sans-serif;
 }
 
-/* Estilos para celular */
+ /* Home */
 
-@media(max-width: 480px) {
-  .homediv, .loginDiv, .registerDiv{
-    position: relative;
-    top: 20px;
-    width: 100vw;
-    height: 100vh;
-    bottom: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 0px;
-  }
-  
-  .imghome, .imgLogin, .imgRegister{
-    position: absolute;
-    background-image: url(../assets/image-food.png);
-    width: 200px;
-    height: 200px;
-    top: 60px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-  }
-  .messagehome, .messageLogin{
-    position: absolute;
-    text-align: center;
-    align-items: center;
-    width: 100%;
-    font-size: 25px;
-    top: 270px;
-  }
+.homediv, .loginDiv, .registerDiv{
+  position: relative;
+  top: 20px;
+  width: 100vw;
+  height: 100vh;
+  bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0px;
+}
 
-  .buttondiv{
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-size: cover;
-    align-items: center;
-    top: 320px;
-    height: auto;
-    width: 90%;
-  }
-  
-  .buttonemail, .buttongoogle,
+.imghome, .imgLogin, .imgRegister{
+  position: absolute;
+  background-image: url(../assets/image-food.png);
+  width: 200px;
+  height: 200px;
+  top: 60px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.messagehome, .messageLogin{
+  position: absolute;
+  text-align: center;
+  align-items: center;
+  width: 100%;
+  font-size: 25px;
+  top: 270px;
+}
+
+.buttondiv{
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-size: cover;
+  align-items: center;
+  top: 320px;
+  height: auto;
+  width: 30%;
+}
+
+.buttonemail, .buttongoogle,
   .buttontwitter, .buttongithub{
     border-radius: 10px;
     padding: 12px;
@@ -68,7 +68,7 @@ body{
     font-size: 18px;
     border-style: none;
     font-family: 'Poppins', sans-serif;
-    width: 90%;
+    width: 100%;
   }
 
   .buttonemail{
@@ -80,8 +80,6 @@ body{
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   }
 
-  
-
   .iconemail{
     position: absolute;
     top: 8%;
@@ -92,7 +90,7 @@ body{
     background-repeat: no-repeat;
     background-size: contain;
   }
-  
+
   .icongoogle{
     position: absolute;
     top: 32%;
@@ -125,6 +123,7 @@ body{
     background-repeat: no-repeat;
     background-size: contain;
   }
+
   .registrarAhora{
     position: absolute;
     display: flex;
@@ -181,14 +180,14 @@ body{
     align-items: center;
     top: 320px;
     height: auto;
-    width: 100%;
+    width: 30%;
   }
 
   .loginCorreo {
     margin: 8px 8px 0px 8px;
     border-radius: 10px;
     font-size: 18px;
-    width: 90%;
+    width: 100%;
     font-family: 'Poppins', sans-serif;
     border-style: none;
     background-image:url(../assets/icon_email.png);
@@ -201,7 +200,7 @@ body{
     margin: 8px 8px 0px 8px;
     border-radius: 10px;
     font-size: 18px;
-    width: 90%;
+    width: 100%;
     font-family: 'Poppins', sans-serif;
     border-style: none;
     background-image:url(../assets/icon_password.png);
@@ -218,7 +217,7 @@ body{
     flex-direction: column;
     top: 120px;
     padding: 12px;
-    width: 90%;
+    width: 100%;
     background: #F2B872;
     align-items: center;
     font-family: 'Poppins', sans-serif;
@@ -236,11 +235,322 @@ body{
 
   }
 
+  /*Register*/
+
+  .registerDiv{
+    position: relative;
+    height: 100%;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+  }
+  .imgRegister{
+    position: absolute;
+    background-image: url(../assets/image-food.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 200px;
+    width: 200px;
+    top: 60px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+  .menssageRegisterRouter{
+    top: 200px;
+    text-align: center;
+    font-size: 25px;
+    width: 100%;
+    position: absolute;
+  }
+  .infoRegister{
+    top: 310px;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
+    
+  }
+  .emailRegister {
+    margin: 8px 8px 0px 8px;
+    border-radius: 10px;
+    font-size: 18px;
+    width: 100%;
+    font-family: 'Poppins', sans-serif;
+    border-style: none;
+    background-image:url(../assets/icon_email.png);
+    background-repeat: no-repeat;
+    background-position: 20px center; 
+    padding: 12px 0px 12px 60px;
+    
+  }
+  .passwordRegister, .checkPasswordRegister{
+    margin: 8px 8px 0px 8px;
+    border-radius: 10px;
+    font-size: 18px;
+    width: 100%;
+    font-family: 'Poppins', sans-serif;
+    border-style: none;
+    background-image:url(../assets/icon_password.png);
+    background-repeat: no-repeat;
+    background-position: 20px center;
+    padding: 12px 0px 12px 60px;
+  }
+  .buttonSaveInformation{
+    position: absolute;
+    margin: 8px 8px 0px 8px;
+    border-radius: 10px;
+    font-size: 18px;
+    flex-direction: column;
+    top: 130px;
+    padding: 12px;
+    width: 100%;
+    background: #F2B872;
+    align-items: center;
+    font-family: 'Poppins', sans-serif;
+    border-style: none;
+  }
+
+/* Estilos para celular */
+
+@media(max-width: 480px) {
+  .homediv, .loginDiv, .registerDiv{
+    position: relative;
+    top: 20px;
+    width: 100vw;
+    height: 100%;
+    bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+  }
+  
+  .imghome, .imgLogin, .imgRegister{
+    position: absolute;
+    background-image: url(../assets/image-food.png);
+    width: 200px;
+    height: 200px;
+    top: 60px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+  .messagehome, .messageLogin{
+    position: absolute;
+    text-align: center;
+    align-items: center;
+    width: 100%;
+    font-size: 25px;
+    top: 270px;
+  }
+
+  .buttondiv{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-size: cover;
+    align-items: center;
+    top: 320px;
+    height: auto;
+    width: 100%;
+  }
+  
+  .buttonemail, .buttongoogle,
+  .buttontwitter, .buttongithub{
+    border-radius: 10px;
+    padding: 12px;
+    margin: 8px 0px 0px 0px;
+    font-size: 18px;
+    border-style: none;
+    font-family: 'Poppins', sans-serif;
+    width:90%;
+    height: 45px;
+  }
+
+  .buttonemail{
+    background-color: #F2B872;
+    }
+
+  .buttonemail:hover, .buttongoogle:hover,
+  .buttontwitter:hover, .buttongithub:hover{
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  }
+
+  
+
+  .iconemail{
+    position: absolute;
+    top: 8%;
+    left: 9%;
+    background-image: url(../assets/icon_email.png);
+    width: 30px;
+    height: 30px;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+  
+  .icongoogle{
+    position: absolute;
+    top: 32%;
+    left: 8%;
+    background-image: url(../assets/icon_google.png);
+    width: 28px;
+    height: 28px;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+  
+  .icontwitter{
+    position: absolute;
+    top: 58%;
+    left: 8%;
+    background-image: url(../assets/icon_twitter.png);
+    width: 28px;
+    height: 28px;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+  
+  .icongithub{
+    position: absolute;
+    top: 82%;
+    left: 8%;
+    background-image: url(../assets/icon_github.png);
+    width: 28px;
+    height: 28px;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+  
+  .registrarAhora{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 200px;
+    margin: 10px auto 10px;
+    top: 550px;
+  } 
+  
+  /* Login*/
+
+  .loginDiv{
+    position: relative;
+    top: 20px;
+    width: 100vw;
+    height: 100vh;
+    bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+  }
+
+  .imgLogin {
+    position: absolute;
+    background-image: url(../assets/image-food.png);
+    width: 200px;
+    height: 200px;
+    top: 60px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .messageLogin {
+    position: absolute;
+    text-align: center;
+    align-items: center;
+    width: 100%;
+    font-size: 25px;
+    top: 210px;
+  }
+
+  .credencialesdiv {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-size: cover;
+    align-items: center;
+    top: 320px;
+    height: auto;
+    width: 100%;
+  }
+
+  .loginCorreo {
+    margin: 8px 8px 0px 8px;
+    border-radius: 10px;
+    font-size: 18px;
+    width: 90%;
+    height: 45px;
+    font-family: 'Poppins', sans-serif;
+    border-style: none;
+    background-image:url(../assets/icon_email.png);
+    background-repeat: no-repeat;
+    background-position: 20px center; 
+    padding: 12px 0px 12px 60px;
+  }
+
+  .loginContra {
+    margin: 8px 8px 0px 8px;
+    border-radius: 10px;
+    font-size: 18px;
+    width: 90%;
+    height: 45px;
+    font-family: 'Poppins', sans-serif;
+    border-style: none;
+    background-image:url(../assets/icon_password.png);
+    background-repeat: no-repeat;
+    background-position: 20px center;
+    padding: 12px 0px 12px 60px;
+  }
+
+  .buttonReturn {
+    position: absolute;
+    margin: 8px 8px 0px 8px;
+    border-radius: 10px;
+    font-size: 18px;
+    flex-direction: column;
+    top: 120px;
+    padding: 12px;
+    width: 90%;
+    height: 45px;
+    background: #F2B872;
+    align-items: center;
+    font-family: 'Poppins', sans-serif;
+    border-style: none;
+  }
+  .mensajelogin {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    margin: 10px auto 10px;
+    top: 550px;
+
+  }
+
 /*Register*/
 
   .registerDiv{
     position: relative;
-    height: 100vh;
+    height: 100%;
     width: 100vw;
     top: 20px;
     bottom: 20px;
@@ -276,7 +586,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 90%;
+    width: 100%;
     
   }
   
@@ -293,7 +603,7 @@ body{
     padding: 12px 0px 12px 60px;
     
   }
-  .passwordRegister, .checkPasswordRegister{
+  .passwordRegister {
     margin: 8px 8px 0px 8px;
     border-radius: 10px;
     font-size: 18px;
@@ -311,7 +621,7 @@ body{
     border-radius: 10px;
     font-size: 18px;
     flex-direction: column;
-    top: 178px;
+    top: 130px;
     padding: 12px;
     width: 90%;
     background: #F2B872;
