--- a/src/styles/muro.css
+++ b/src/styles/muro.css
@@ -20,6 +20,322 @@ body{
   font-family: 'Poppins', sans-serif;
 }
 
+header{
+  background-color: #F2B872;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  height: 80px;
+}
+
+main {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.tasks-container {
+  position: absolute;
+  top: 100px;
+  width: 45%;
+}
+
+.create-post{
+  display: flex;
+  position: relative;
+  align-items: center;
+  background-color: white;
+  margin: 20px;
+  height: 80px;
+  border-radius: 7px;
+  text-align: center;
+  justify-content: center;
+  box-shadow: 0 5px 10px rgba(0,0,0, 0.3);
+}
+
+.publicaciones{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 30px auto 30px;
+  grid-gap: 3px;
+  background-color: white;
+  margin: 20px;
+  border-radius: 7px;
+  padding: 10px;
+  text-align: justify;
+  z-index: -3;
+  font-size: 14px;
+  max-height: max-content;
+}
+
+.icon_exit{
+  position: absolute;
+  background-image: url(../assets/exit-regular-60.png);
+  cursor: pointer;
+  top: 20px;
+  right: 0;
+  margin-right: 20px;
+  width: 40px;
+  height: 40px;
+  background-size: cover;
+}
+
+.img_food{
+  position: absolute;
+  background-image: url(../assets/icon/natural_icon.png);
+  width: 40px;
+  height: 40px;
+  margin-left: 20px;
+  background-size: contain;
+  left: 0;
+}
+
+.create-post{
+  display: flex;
+  position: relative;
+  align-items: center;
+  background-color: white;
+  margin: 20px;
+  height: 80px;
+  border-radius: 7px;
+  text-align: center;
+  justify-content: center;
+  box-shadow: 0 5px 10px rgba(0,0,0, 0.3);
+}
+
+.open-popup{
+  text-align: center;
+  border: 0;
+  padding: 10px;
+  background: none;
+  width: 300px;
+  height: 50px;
+  font-family: 'Poppins', sans-serif;
+  background-color: white;
+}
+
+.pop-up{
+  position: absolute;
+  top: 0;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100%;
+  background-color: rgba(0,0,0, 0.5);
+  box-shadow: 0 12px 28px rgb(0, 0, 0, 0.12);
+  z-index: 999;
+}
+
+section {
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+}
+
+.post h2{
+  position: relative;
+  font-size: 20px;
+  font-weight: 600;
+  text-align: center;
+  padding: 5px 0;
+}
+
+.post .form-post{
+  position: relative;
+  top:5%;
+  margin: 40px 30px;
+  height: 350px;
+  width: 45%;
+  background-color: var(--color-azul);
+  border-radius: 7px;
+  z-index: 3;
+}
+
+.post .form-post :where(.content-post, .detail-post .privacy){
+  position: relative;
+  display: flex;
+  align-items: center;
+  margin: 10px;
+  
+}
+
+.post .form-post .content-post img{
+  position: relative;
+  max-width: 52px;
+}
+
+.post .form-post .content-post .detail-post{
+  position: relative;
+  margin: 3px 0 0 12px;
+}
+
+.form-post .content-post .detail-post p{
+  position: relative;
+  font-size: 17px;
+  font-weight: 500;
+}
+
+.form-post .content-post .detail-post .privacy{
+  position: relative;
+  max-width: 120px;
+  cursor: pointer;
+  font-size: 11px;
+  margin-top: 3px;
+  padding: 0 10px;
+  border-radius: 5px;
+  background: #e4e6eb;
+  justify-content: space-between; /* buscar otra .form-posta de separar*/
+}
+
+.detail-post .privacy span{
+  position: relative;
+  font-size: 13px;
+  margin-top: 1px;
+  font-weight: 500;
+}
+
+.btn-menu{
+  border: none;
+  background-color: white;
+  right: 0;
+  padding: 2px 2px 0px;
+  border-color: white;
+  position: absolute;   
+}
+
+.btn-menu i{
+  font-size: 20px;
+  right: 0;
+}
+
+.dropdown{
+  position: relative;
+  grid-column: 1 / 3;
+  grid-row: 1;
+}
+
+.detail-post .privacy i:last-child{
+  position: relative;
+  font-size: 13px;
+  margin-left: 1px;
+}
+
+.post .form-post textarea{
+  position: relative;
+  resize: none;
+  width: 100%;
+  outline: none;
+  font-size: 14px;
+  margin-top: 10px;
+  min-height: 175px;
+  padding: 8px 10px;
+  text-align: justify;
+}
+
+.container-options button{
+  background-color: var(--color-azul);
+  border: none;
+  border-radius: 7px;
+  padding: 3px;
+  margin: 2px;
+  width: 70px;
+  display: flex;
+  justify-content: center;
+  font-family: 'Poppins', sans-serif;
+}
+
+.form-post textarea:valid ~ button{
+  position: relative;
+  color: black;
+  cursor: pointer;
+  background: var(--color-azul);
+  font-weight: bold;
+}
+
+.cerrar-post{
+  position: absolute;
+  top: 10%;
+  right: 28%;
+  width: 5%;
+  border: none;
+  z-index: 999;
+  border-radius: 7px;
+  background-color: var(--color-azul);
+  font-size: 22px;
+  cursor: pointer;
+}
+
+.container{
+  height: 100%;
+  width: 100%;
+  background-color: rgb(0, 0, 0, 0.12);
+}
+
+.form-post .publicar-post{
+  top: -6px;
+  border: none;
+  width: 100%;
+  height: 50px;
+  font-size: 16px;
+  border-radius: 7px;
+}
+
+.container-options{
+  display: none;
+  position: absolute;
+  width: 75px;
+  height: 60px;
+  top: 20px;
+  margin-left: 250px;
+  background-color: white;
+  border-radius: 10px;
+  right: 0;
+}
+
+.btn-delete .btn-edit{
+  position: absolute;
+  align-items: center;
+  border: none;
+}
+
+
+ .body-description{
+    grid-column: 1 / 3;
+    grid-row: 2;
+  }
+
+  .reactions{
+    grid-column: 1 / 3;
+    grid-row: 3;
+  }
+
+  .reactions span{
+    position: relative;
+    bottom: 5px;
+    right: 0;
+  }
+  
+  .dropdown:hover .container-options{
+    display: block;
+  }
+
+  /* like */
+  .btn-like {
+    background-image: url(../assets/icon/me-gusta.png);
+    background-color: white;
+    margin-top: 5px;
+    border: none;
+    width: 20px;
+    height: 20px;
+    background-size: contain;
+    left: 0;
+  }
+
 /* Estilos para celular */
 
 @media(max-width: 480px) {
@@ -28,6 +344,7 @@ body{
     background-color: #F2B872;
     display: flex;
     justify-content: center;
+    align-items: center;
     position: relative;
     height: 80px;
   }
@@ -39,16 +356,17 @@ body{
     top: 20px;
     right: 0;
     margin-right: 20px;
-    width: 35px;
-    height: 35px;
+    width: 40px;
+    height: 40px;
     background-size: cover;
   }
 
   .img_food{
     position: absolute;
     background-image: url(../assets/icon/natural_icon.png);
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
+    margin-left: 20px;
     background-size: contain;
     left: 0;
   }
@@ -63,7 +381,7 @@ body{
     border-radius: 7px;
     text-align: center;
     justify-content: center;
-    box-shadow: 0 5px 10px rgba(0,0,0, 0.3);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
   }
 
   .open-popup{
@@ -77,13 +395,22 @@ body{
     background-color: white;
   }
 
-  .pop-up{
-    position: absolute;
-    top: 0;
-    display: none;
+  section {
+    display: flex;
+    position: relative;
     align-items: center;
     justify-content: center;
     height: 100%;
+    width: 100%;
+  }
+
+  .pop-up{
+    position: absolute;
+    top:0px;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
     width: 100%;
     background-color: rgba(0,0,0, 0.5);
     box-shadow: 0 12px 28px rgb(0, 0, 0, 0.12);
@@ -100,9 +427,9 @@ body{
 
   .post .form-post{
     position: relative;
-    top: 100px;
     margin: 40px 30px;
     height: 350px;
+    width: 100%;
     background-color: var(--color-azul);
     border-radius: 7px;
     z-index: 3;
@@ -185,6 +512,7 @@ body{
     font-family: 'Poppins', sans-serif;
   }
 
+
   .form-post textarea:valid ~ button{
     position: relative;
     color: black;
@@ -195,7 +523,7 @@ body{
 
   .cerrar-post{
     position: absolute;
-    top: 141px;
+    top:10%;
     right: 30px;
     width: 10%;
     border: none;
@@ -212,32 +540,29 @@ body{
   }
 
   .form-post .publicar-post{
-    top: -6px;
     border: none;
     width: 100%;
     height: 50px;
     font-size: 16px;
     border-radius: 7px;
   }
-  
-  /* task container*/
-  /*
-  .tasks-container{
-    display: flex;
-    position: relative;
-    align-items: center;
-    background-color: white;
-    margin: 20px;
-    width: 350px;
-    height: 80px;
-    border-radius: 10px;
-    text-align: center;
-    justify-content: center;
-    border: 1px solid black;
-    z-index: -3;
+  .dateFormat{
+    padding: 10px;
+    text-align: left;
   }
-  */
-
+  
+  main {
+    position: relative;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .tasks-container {
+    position: absolute;
+    top: 100px;
+    width: 100%;
+  }
+  
   .publicaciones{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -259,8 +584,7 @@ body{
     right: 0;
     padding: 2px 2px 0px;
     border-color: white;
-    position: absolute;
-    z-index: 4;   
+    position: absolute;   
   }
 
   .container-options{
@@ -272,6 +596,7 @@ body{
     margin-left: 250px;
     background-color: white;
     border-radius: 10px;
+    right: 0;
   }
 
   .btn-delete .btn-edit{
