--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500&display=swap');
 
+:root {
+  --color-rosa:#F2B3CA;
+  --color-azul:#ADD4D9;
+  --color-marron:#A6796F;
+  --color-negro:#0D0D0D;
+  --color-naranja:#F2B872;
+}
+
 *{
   margin: 0;
   padding: 0;
@@ -133,6 +141,18 @@ body{
     margin: 10px auto 10px;
     top: 570px;
   } 
+
+  .texto-register {
+    color: black;
+    transition: color .5s;
+    font-size: 20px;
+  }
+
+  .texto-register:hover {
+    color: #A6796F;
+    
+  }
+
   
   /* Login*/
 
@@ -223,6 +243,12 @@ body{
     font-family: 'Poppins', sans-serif;
     border-style: none;
   }
+
+  .loginCorreo:hover, .loginContra:hover,
+  .buttonReturn:hover {
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  }
+
   .mensajelogin {
     position: absolute;
     display: flex;
@@ -232,8 +258,18 @@ body{
     width: 100%;
     margin: 10px auto 10px;
     top: 530px;
-
   }
+
+  .texto-register-login {
+    color: black;
+    transition: color .5s;
+    font-size: 20px;
+  }
+
+  .texto-register-login:hover {
+    color: #A6796F;
+  }
+
 
   /*Register*/
 
@@ -314,6 +350,11 @@ body{
     align-items: center;
     font-family: 'Poppins', sans-serif;
     border-style: none;
+  }
+
+  .emailRegister:hover, .passwordRegister:hover,
+  .buttonSaveInformation:hover {
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   }
 
 /* Estilos para celular */
