--- a/src/styles/muro.css
+++ b/src/styles/muro.css
@@ -20,38 +20,18 @@ body{
   font-family: 'Poppins', sans-serif;
 }
 
+/* TODO: Header y Navbar */
+
 header{
   background-color: #F2B872;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  position: relative;
-  height: 80px;
+  height: 75px;
+  padding: 28px 12%;
 }
 
-.icon_exit{
-  position: absolute;
-  background-image: url(../assets/exit-regular-60.png);
-  cursor: pointer;
-  top: 20px;
-  right: 0;
-  margin-right: 20px;
-  width: 40px;
-  height: 40px;
-  background-size: cover;
-}
-
-.img_food{
-  position: absolute;
-  background-image: url(../assets/icon/natural_icon.png);
-  width: 40px;
-  height: 40px;
-  margin-left: 20px;
-  background-size: contain;
-  left: 0;
-}
-
-main {
+main{
   position: relative;
   display: flex;
   justify-content: center;
@@ -63,6 +43,38 @@ main {
   width: 45%;
 }
 
+.logo{
+  display: flex;
+  align-items: center;
+}
+
+.logo i{
+  color: var(--color-marron);
+  font-size: 28px;
+  margin-right: 5px;
+}
+
+.logo span{
+  font-size: 1.1rem;
+  font-weight: 600;
+}
+
+header .icon_exit{
+  font-size: 20px;
+  color: var(--color-marron);
+  padding: 7px 15px;
+  background: white;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+header .icon_exit i{
+  font-weight: 700;
+}
+
+/* TODO: Post */
+
 .create-post{
   display: flex;
   position: relative;
@@ -70,25 +82,11 @@ main {
   background-color: white;
   margin: 20px;
   height: 80px;
+  width: 45%;
   border-radius: 7px;
   text-align: center;
   justify-content: center;
   box-shadow: 0 5px 10px rgba(0,0,0, 0.3);
-}
-
-.publicaciones{
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 30px auto 30px;
-  grid-gap: 3px;
-  background-color: white;
-  margin: 20px;
-  border-radius: 7px;
-  padding: 10px;
-  text-align: justify;
-  z-index: -3;
-  font-size: 14px;
-  max-height: max-content;
 }
 
 .open-popup{
@@ -96,31 +94,26 @@ main {
   border: 0;
   padding: 10px;
   background: none;
-  width: 300px;
-  height: 50px;
+  width: 100%;
+  height: 100%;
+  border-radius: 7px;
+  font-size: 15px;
   font-family: 'Poppins', sans-serif;
   background-color: white;
 }
 
-section {
-  display: flex;
-  position: relative;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  width: 100%;
+.open-popup:hover {
+  background-color: #ADD4D9;
 }
 
 .pop-up{
-  position: absolute;
-  top: 0px;
+  position: fixed;
   display: none;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
+  top: 0;
+  left: 0;
+  height: 100%;
   width: 100%;
   background-color: rgba(0,0,0, 0.5);
-  box-shadow: 0 12px 28px rgb(0, 0, 0, 0.12);
   z-index: 999;
 }
 
@@ -131,13 +124,18 @@ section {
   text-align: center;
   padding: 5px 0;
 }
+.post {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .post .form-post{
-  position: relative;
-  top:5%;
+  position: absolute;
+  top: 5%;
   margin: 40px 30px;
-  height: 350px;
   width: 45%;
+  height: 350px;
   background-color: var(--color-azul);
   border-radius: 7px;
   z-index: 3;
@@ -179,6 +177,16 @@ section {
   justify-content: space-between; /* buscar otra .form-posta de separar*/
 }
 
+.reactions{
+  grid-column: 1 / 3;
+  grid-row: 3;
+}
+
+.reactions span{
+  position: relative;
+  bottom: 5px;
+}
+
 .detail-post .privacy span{
   position: relative;
   font-size: 13px;
@@ -186,24 +194,8 @@ section {
   font-weight: 500;
 }
 
-.btn-menu{
-  border: none;
-  background-color: white;
-  right: 0;
-  padding: 2px 2px 0px;
-  border-color: white;
-  position: absolute;   
-}
-
 .btn-menu i{
   font-size: 20px;
-  right: 0;
-}
-
-.dropdown{
-  position: relative;
-  grid-column: 1 / 3;
-  grid-row: 1;
 }
 
 .detail-post .privacy i:last-child{
@@ -246,7 +238,7 @@ section {
 
 .cerrar-post{
   position: absolute;
-  top: 10%;
+  top: 11%;
   right: 28%;
   width: 5%;
   border: none;
@@ -256,7 +248,6 @@ section {
   font-size: 22px;
   cursor: pointer;
 }
-
 .container{
   height: 100%;
   width: 100%;
@@ -272,16 +263,39 @@ section {
   border-radius: 7px;
 }
 
+.publicaciones{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 30px auto 30px;
+  grid-gap: 3px;
+  background-color: white;
+  margin: 20px;
+  border-radius: 7px;
+  padding: 10px;
+  text-align: justify;
+  z-index: -3;
+  font-size: 14px;
+  max-height: max-content;
+}
+
+.btn-menu{
+  border: none;
+  background-color: white;
+  right: 0;
+  padding: 2px 2px 0px;
+  border-color: white;
+  position: absolute;   
+}
+
 .container-options{
   display: none;
   position: absolute;
   width: 75px;
   height: 60px;
   top: 20px;
-  margin-left: 250px;
+  right: 0;
   background-color: white;
   border-radius: 10px;
-  right: 0;
 }
 
 .btn-delete .btn-edit{
@@ -290,75 +304,43 @@ section {
   border: none;
 }
 
+.dropdown{
+  position: relative;
+  grid-column: 1 / 3;
+  grid-row: 1;
+}
 
- .body-description{
-    grid-column: 1 / 3;
-    grid-row: 2;
-  }
+.body-description{
+  grid-column: 1 / 3;
+  grid-row: 2;
+}
 
-  .reactions{
-    grid-column: 1 / 3;
-    grid-row: 3;
-  }
+.dropdown:hover .container-options{
+  display: block;
+}
 
-  .reactions span{
-    position: relative;
-    bottom: 5px;
-    right: 0;
-  }
-  
-  .dropdown:hover .container-options{
-    display: block;
-  }
-
-  /* like */
-  .btn-like {
-    background-image: url(../assets/icon/me-gusta.png);
-    background-color: white;
-    margin-top: 5px;
-    border: none;
-    width: 20px;
-    height: 20px;
-    background-size: contain;
-    left: 0;
-  }
-
-/* Estilos para celular */
+/* like */
+.btn-like {
+  background-image: url(../assets/icon/me-gusta.png);
+  background-color: white;
+  margin-top: 5px;
+  border: none;
+  width: 20px;
+  height: 20px;
+  background-size: contain;
+  left: 0;
+}
 
 @media(max-width: 480px) {
-
-  header{
-    background-color: #F2B872;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    height: 80px;
-  }
-
-  main {
-    position: relative;
-    display: flex;
-    justify-content: center;
-  }
 
   .tasks-container {
     position: absolute;
     top: 100px;
-    width: 100%;
+    width: 350px;
   }
 
   .create-post{
-    display: flex;
-    position: relative;
-    align-items: center;
-    background-color: white;
-    margin: 20px;
-    height: 80px;
-    border-radius: 7px;
-    text-align: center;
-    justify-content: center;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+    width: fit-content;
   }
 
   .publicaciones{
@@ -381,31 +363,25 @@ section {
     border: 0;
     padding: 10px;
     background: none;
-    width: 300px;
-    height: 50px;
+    width: 100%;
+    height: 100%;
     font-family: 'Poppins', sans-serif;
     background-color: white;
+    transition: color .7s;
   }
-
-  section {
-    display: flex;
-    position: relative;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    width: 100%;
+  
+  .open-popup:hover {
+    background-color: #ADD4D9;
   }
 
   .pop-up{
-    position: absolute;
-    top:0px;
+    position: fixed;
     display: none;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+    top: 0;
+    left: 0;
+    height: 100%;
     width: 100%;
     background-color: rgba(0,0,0, 0.5);
-    box-shadow: 0 12px 28px rgb(0, 0, 0, 0.12);
     z-index: 999;
   }
 
@@ -419,9 +395,10 @@ section {
 
   .post .form-post{
     position: relative;
+    top: 100px;
+    width: 100%;
     margin: 40px 30px;
     height: 350px;
-    width: 100%;
     background-color: var(--color-azul);
     border-radius: 7px;
     z-index: 3;
@@ -463,22 +440,22 @@ section {
     justify-content: space-between; /* buscar otra .form-posta de separar*/
   }
 
+  .reactions{
+    grid-column: 1 / 3;
+    grid-row: 3;
+  }
+
+  .reactions span{
+    position: relative;
+    bottom: 5px;
+  }
+
   .detail-post .privacy span{
     position: relative;
     font-size: 13px;
     margin-top: 1px;
     font-weight: 500;
   }
-
-  .btn-menu{
-    border: none;
-    background-color: white;
-    right: 0;
-    padding: 2px 2px 0px;
-    border-color: white;
-    position: absolute;   
-  }
-
 
   .btn-menu i{
     font-size: 20px;
@@ -514,7 +491,6 @@ section {
     font-family: 'Poppins', sans-serif;
   }
 
-
   .form-post textarea:valid ~ button{
     position: relative;
     color: black;
@@ -525,7 +501,7 @@ section {
 
   .cerrar-post{
     position: absolute;
-    top:10%;
+    top: 141px;
     right: 30px;
     width: 10%;
     border: none;
@@ -542,27 +518,32 @@ section {
   }
 
   .form-post .publicar-post{
+    top: -6px;
     border: none;
     width: 100%;
     height: 50px;
     font-size: 16px;
     border-radius: 7px;
   }
-  .dateFormat{
-    padding: 10px;
-    text-align: left;
+
+  .btn-menu{
+    border: none;
+    background-color: white;
+    right: 0;
+    padding: 2px 2px 0px;
+    border-color: white;
+    position: absolute;
+    z-index: 4;   
   }
-  
+
   .container-options{
     display: none;
     position: absolute;
     width: 75px;
     height: 60px;
     top: 20px;
-    margin-left: 250px;
     background-color: white;
     border-radius: 10px;
-    right: 0;
   }
 
   .btn-delete .btn-edit{
@@ -581,19 +562,20 @@ section {
     grid-column: 1 / 3;
     grid-row: 2;
   }
-
-  .reactions{
-    grid-column: 1 / 3;
-    grid-row: 3;
-  }
-
-  .reactions span{
-    position: relative;
-    bottom: 5px;
-  }
   
   .dropdown:hover .container-options{
     display: block;
   }
 
+  /* like */
+  .btn-like {
+    background-image: url(../assets/icon/me-gusta.png);
+    background-color: white;
+    margin-top: 5px;
+    border: none;
+    width: 20px;
+    height: 20px;
+    background-size: contain;
+    left: 0;
+  }
 }
