--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -34,6 +34,28 @@ body{
   padding: 0px;
 }
 
+.btn-regresar{
+  position: absolute;
+  border: none;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  top: 15px;
+  left: 0;
+  width: 35px;
+  height: 35px;
+  cursor: pointer;
+  margin: 20px;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.btn-regresar i{
+  font-weight: 700;
+  font-size: 25px;
+}
+
 .imghome, .imgLogin, .imgRegister{
   position: absolute;
   background-image: url(../assets/image-food.png);
