--- a/src/styles/muro.css
+++ b/src/styles/muro.css
@@ -83,7 +83,7 @@ header .icon_exit i{
   display: flex;
   position: relative;
   align-items: center;
-  background-color: white;
+  background-color:#ADD4D9;
   margin: 20px;
   height: 80px;
   width: 45%;
