--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -341,7 +341,7 @@ body{
     padding: 12px 0px 12px 60px;
     
   }
-  .passwordRegister, .checkPasswordRegister{
+  .passwordRegister {
     margin: 8px 8px 0px 8px;
     border-radius: 10px;
     font-size: 18px;
@@ -359,7 +359,7 @@ body{
     border-radius: 10px;
     font-size: 18px;
     flex-direction: column;
-    top: 130px;
+    top: 170px;
     padding: 12px;
     width: 100%;
     background: #F2B872;
@@ -380,7 +380,7 @@ body{
     position: relative;
     top: 20px;
     width: 100vw;
-    height: 100%;
+    height: 100vh;
     bottom: 20px;
     display: flex;
     flex-direction: column;
@@ -610,8 +610,6 @@ box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
     text-align: center;
     width: 100%;
     margin: 10px auto 10px;
-    top: 530px;
-
   }
 
 /*Register*/
@@ -649,7 +647,7 @@ box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
     margin: 8px 8px 0px 8px;
     border-radius: 10px;
     font-size: 18px;
-    width: 90%;
+    width: 100%;
     font-family: 'Poppins', sans-serif;
     border-style: none;
     background-image:url(../assets/icon_email.png);
@@ -658,10 +656,17 @@ box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
     padding: 12px 0px 12px 60px;
     
   }
-  .passwordRegister,.checkPasswordRegister{
+  .passwordRegister {
+    margin: 8px 8px 0px 8px;
+    border-radius: 10px;
+    font-size: 18px;
+    width: 100%;
+    font-family: 'Poppins', sans-serif;
+    border-style: none;
     background-image:url(../assets/icon_password.png);
     background-repeat: no-repeat;
     background-position: 20px center;
+    padding: 12px 0px 12px 60px;
   }
 }
 
