--- a/src/styles/muro.css
+++ b/src/styles/muro.css
@@ -83,7 +83,7 @@ header .icon_exit i{
   display: flex;
   position: relative;
   align-items: center;
-  background-color:#ADD4D9;
+  background-color:white;
   margin: 20px;
   height: 80px;
   width: 45%;
@@ -99,11 +99,16 @@ header .icon_exit i{
   border: 0;
   padding: 10px;
   background: none;
-  width: 300px;
-  height: 50px;
+  width: 100%;
+  height: 100%;
+  border-radius: 7px;
   font-family: 'Poppins', sans-serif;
   background-color: white;
   cursor: pointer;
+}
+
+.open-popup:hover {
+  background-color: var(--color-azul);
 }
 
 .pop-up{
@@ -356,16 +361,6 @@ header .icon_exit i{
     max-height: max-content;
   }
 
-  .open-popup{
-    text-align: center;
-    border: 0;
-    padding: 10px;
-    background: none;
-    width: 300px;
-    height: 50px;
-    font-family: 'Poppins', sans-serif;
-    background-color: white;
-  }
 
   .pop-up{
     position: fixed;
